apps/payroll/app/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 98.5%;
    --foreground: 0 0% 15%;
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 221.2 83.2% 53.3%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 91.1%;
    --secondary-foreground: 215.4 16.3% 46.9%;
    --muted: 210 40% 86.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 74.2% 50.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 221.2 83.2% 53.3%;
    --green: 120 40% 50%;
    --radius: 0.4rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;

    /* Custom scrollbar colors for light mode */
    --scrollbar-bg: 210 40% 96.1%;
    --scrollbar-thumb: 221.2 83.2% 53.3%;
  }

  .dark {
    --background: 0 0% 4%;
    --foreground: 0 0% 85%;
    --card: 220 15% 10%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 217.2 91.2% 59.8%;
    --primary-foreground: 222.2 47.4% 11.2%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 215 20.2% 65.1%;
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 52.8% 35%;
    --destructive-foreground: 210 40% 98%;
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 23.5%;
    --ring: 224.3 76.3% 48%;
    --green: 120 60% 30%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;

    /* Custom scrollbar colors for dark mode */
    --scrollbar-bg: 217.2 32.6% 17.5%;
    --scrollbar-thumb: 217.2 91.2% 59.8%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  input[type='date']::-webkit-calendar-picker-indicator {
    padding: 8px;
  }

  body {
    @apply bg-background text-foreground;
  }

  /* Custom scrollbar styles */
  ::-webkit-scrollbar {
    width: 6px;
    opacity: 70%;
  }
  
  ::-webkit-scrollbar-corner {
    background: transparent; /* Or match it with your app's background */
}

  ::-webkit-scrollbar-track {
    background: transparent;
  }

  ::-webkit-scrollbar-thumb {
    background-color: hsl(var(--scrollbar-thumb));
    border-radius: 10px;
  }

  /* For Firefox */
  * {
    scrollbar-width: thin;
    scrollbar-color: hsl(var(--scrollbar-thumb)) hsl(var(--scrollbar-bg));
  }
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  .input-dark {
    color-scheme: dark;
  }
}


/* Spinner */
.loading-wrapper {
  height: var(--spinner-size);
  width: var(--spinner-size);
  position: absolute;
  inset: 0;
  z-index: 10;
}

.loading-wrapper[data-visible='false'] {
  transform-origin: center;
  animation: fade-out 0.2s ease forwards;
}

.spinner {
  position: relative;
  top: 50%;
  left: 50%;
  height: var(--spinner-size);
  width: var(--spinner-size);
}

.loading-parent {
  display: flex;
  height: 16px;
  width: 16px;
  position: relative;
  justify-content: flex-start;
  align-items: center;
  flex-shrink: 0;
  margin-left: -3px;
  margin-right: 4px;
}

.loading-bar {
  animation: loading 1.2s linear infinite;
  background: hsl(0, 0%, 43.5%);
  border-radius: 6px;
  height: 8%;
  left: -10%;
  position: absolute;
  top: -3.9%;
  width: 24%;
}

.loading-bar:nth-child(1) {
  animation-delay: -1.2s;
  /* Rotate trick to avoid adding an additional pixel in some sizes */
  transform: rotate(0.0001deg) translate(146%);
}

.loading-bar:nth-child(2) {
  animation-delay: -1.1s;
  transform: rotate(30deg) translate(146%);
}

.loading-bar:nth-child(3) {
  animation-delay: -1s;
  transform: rotate(60deg) translate(146%);
}

.loading-bar:nth-child(4) {
  animation-delay: -0.9s;
  transform: rotate(90deg) translate(146%);
}

.loading-bar:nth-child(5) {
  animation-delay: -0.8s;
  transform: rotate(120deg) translate(146%);
}

.loading-bar:nth-child(6) {
  animation-delay: -0.7s;
  transform: rotate(150deg) translate(146%);
}

.loading-bar:nth-child(7) {
  animation-delay: -0.6s;
  transform: rotate(180deg) translate(146%);
}

.loading-bar:nth-child(8) {
  animation-delay: -0.5s;
  transform: rotate(210deg) translate(146%);
}

.loading-bar:nth-child(9) {
  animation-delay: -0.4s;
  transform: rotate(240deg) translate(146%);
}

.loading-bar:nth-child(10) {
  animation-delay: -0.3s;
  transform: rotate(270deg) translate(146%);
}

.loading-bar:nth-child(11) {
  animation-delay: -0.2s;
  transform: rotate(300deg) translate(146%);
}

.loading-bar:nth-child(12) {
  animation-delay: -0.1s;
  transform: rotate(330deg) translate(146%);
}

@keyframes loading {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0.15;
  }
}

.loading-ellipsis:after {
  overflow: hidden;
  display: inline-block;
  vertical-align: bottom;
  -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
  animation: ellipsis steps(4,end) 900ms infinite;
  content: "\2026"; /* ascii code for the ellipsis character */
  width: 0px;
}

@keyframes ellipsis {
  to {
    width: 1.25em;    
  }
}

@-webkit-keyframes ellipsis {
  to {
    width: 1.25em;    
  }
}

/* Date picker */
.rdp-tbody .rdp-button {
  border-radius: 100%;
}

.aria-selected\:text-accent-foreground[aria-selected="true"] {
  border-radius: 0px;
}

